# kalkulacka_hw

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  utils.rs
src/calculations/: calculations.rs  mod.rs
src/cli/: mod.rs
src/gui/: mod.rs
src/types/: types.rs
