[package]
name = "kalkulacka_hw"
version = "0.1.0"
authors = ["handz"]
edition = "2018"
description = "Kalkulačka pro pár operací s 64bit registry MM1 a MM2."
build= "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"

#CLI
structopt = { version = "0.3.14", optional = true }

#GUI
iced = { version = "0.1.1", optional = true }
regex = { version = "1.3.9" , optional = true }
lazy_static = { version = "1.4.0" , optional = true }
clipboard = { version = "0.5.0", optional = true }
uuid = { version = "0.8.1", features = ["v4"], optional = true }

[features]
default = ["gui"]

debug = []
cli = ["structopt"]
gui = ["iced", "regex", "lazy_static", "clipboard", "uuid"]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.11"
winapi = "0.3.8"

[package.metadata.winres]
ProductName = "Kalkulačka!"